--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  background-color: #ff9900;
+  margin:0;
+  padding:0;
+}
+
+app-root{
+  z-index: 1000;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+}
+
+.bg {
+  z-index: 0;
+  background-color: #006666;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 66vh;
+  bottom: 0;
+}
