--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <a routerLink="deelnemer/opdracht1">Opdracht 1</a> |
   <a routerLink="deelnemer/opdracht4">Opdracht 4</a> |
   <a routerLink="deelnemer/opdracht5">Opdracht 5</a> |
+  <a routerLink="deelnemer/opdracht7">Opdracht 7</a> |
   <a routerLink="deelnemer/opdracht8">Opdracht 8</a>
 </nav>
 
