updates to deploy to heroku

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <nav>
-  <a routerLink="deelnemer/opdracht1">Opdracht 1</a> |
-  <a routerLink="deelnemer/opdracht4">Opdracht 4</a> |
-  <a routerLink="deelnemer/opdracht5">Opdracht 5</a> |
-  <a routerLink="deelnemer/opdracht7">Opdracht 7</a> |
-  <a routerLink="deelnemer/opdracht8">Opdracht 8</a>
+  <a routerLink="deelnemer/opdracht1" routerLinkActive="active">Opdracht 1</a>
+  <a routerLink="deelnemer/opdracht4" routerLinkActive="active">Opdracht 4</a>
+  <a routerLink="deelnemer/opdracht5" routerLinkActive="active">Opdracht 5</a>
+  <a routerLink="deelnemer/opdracht7" routerLinkActive="active">Opdracht 7</a>
+  <a routerLink="deelnemer/opdracht8" routerLinkActive="active">Opdracht 8</a>
 </nav>
 
 <router-outlet></router-outlet>
