fix: badkamer kleiner gemaakt

--- a/src/app/deelnemer/opdracht1/opdracht1.component.html
+++ b/src/app/deelnemer/opdracht1/opdracht1.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="badkamer" (mousemove)="onMouseMove($event)">
     <div class="img">
-      <img src="assets/img/badkamer.PNG" alt="badkamer">
+      <img src="assets/img/badkamer.PNG" alt="badkamer" style="display: none;" #bathroom>
     </div>
     <div class="keyhole" style="background-position-x: -600px; background-position-y: -700px;" #keyhole></div>
   </div>
