--- a/src/app/deelnemer/opdracht1/opdracht1.component.scss
+++ b/src/app/deelnemer/opdracht1/opdracht1.component.scss
@@ -7,8 +7,8 @@
 
 
 .badkamer {
-  width: 1217px;
-  height: 914px;
+  width: 815px;
+  height: 612px;
   overflow: hidden;
   margin: 20px auto;
   padding: 15px;
@@ -20,10 +20,11 @@
 }
 
 .keyhole {
-  width: 1217px;
-  height: 914px;
+  width: 815px;
+  height: 612px;
   overflow: hidden;
   background: url("../../../assets/img/hole.png") no-repeat;
+  background-size: 2000px 2000px;
   z-index: 5;
   position: absolute;
   cursor: none;
