--- a/src/app/naam-invoer/naam-invoer.component.html
+++ b/src/app/naam-invoer/naam-invoer.component.html
@@ -1,1 +1,3 @@
-<p>naam-invoer works!</p>
+<label for="naam">Naam: </label>
+<input type="text" name="naam" id="naam" [(ngModel)]="naam">
+<button type="submit" (click)="verzend()">Verzend</button>
