--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,12 @@
 nav {
-  padding: 20px;
+  padding: 10px;
 
   a {
-    font-size: 2rem;
+    font-size: 1rem;
     color: #006666;
     border: solid 1px #006666;
-    padding:5px 10px;
-    margin: 0 10px;
+    padding:5px 5px;
+    margin: 0 5px;
     border-radius: 4px;
     text-decoration: none;
 
@@ -21,4 +21,10 @@ nav {
       color: #ff9900;
     }
   }
+}
+
+.username{
+  position: fixed;
+  left: 5px;
+  bottom:30px;
 }
