--- a/src/app/deelnemer/opdracht4/opdracht4.component.scss
+++ b/src/app/deelnemer/opdracht4/opdracht4.component.scss
@@ -1,7 +1,56 @@
 canvas {
   z-index: 1000;
-  position: fixed;
-  height: 100vh;
-  width: 100vw;
   cursor: none;
+}
+
+.content {
+  //max-height: calc(100vh - 100px);
+  //max-width: 717px;
+  overflow: auto;
+  margin: 0 auto;
+}
+
+.zoomIn,
+.zoomOut,
+.help {
+  z-index: 100;
+  position: absolute;
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.charms {
+  overflow: hidden;
+  position: absolute;
+  background: #ccc;
+  opacity: 0.7;
+  right: 0%;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  width: 96px;
+}
+
+.zoomIn:hover,
+.zoomOut:hover,
+.help:hover {
+  opacity: 1.0;
+}
+
+.help {
+  right: 0%;
+  top: 50%;
+  margin: -150px 25px 0 0;
+}
+
+.zoomIn {
+  right: 0%;
+  top: 50%;
+  margin: -50px 25px 0 0;
+}
+
+.zoomOut {
+  right: 0%;
+  top: 50%;
+  margin: 50px 25px 0 0;
 }
