--- a/src/app/deelnemer/opdracht5/opdracht5.component.scss
+++ b/src/app/deelnemer/opdracht5/opdracht5.component.scss
@@ -1,93 +1,8 @@
-
-.container {
-  z-index: 1;
-  display: flex;
-  vertical-align: top;
-  max-width: 1050px;
-  margin: 0 auto;
-  background-color: white;
-}
-.cartoons {
-  display: inline-block;
-  height: 100vh;
-  width: 520px;
-  min-width: 520px;
-  overflow: auto;
-  img {
-    width: 500px;
-  }
+canvas {
+  z-index: 1000;
+  position: fixed;
+  height: calc(100vh - 150px);
+  width: 100vw;
 }
 
-.wordlist, .cartoonlist{
-  display: flex;
-  flex-wrap: wrap;
-}
 
-.words {
-  display: inline-block;
-  min-height: 60px;
-  background: white;
-  border-radius: 4px;
-  overflow: hidden;
-  //width: 50%;
-  max-width: 500px;
-  vertical-align: top;
-  //display: block;
-}
-
-.word {
-  padding: 20px 10px;
-  border: solid 1px #ff9900;
-  border-radius: 4px;
-  color: rgba(0, 0, 0, 0.87);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-  cursor: move;
-  background: white;
-  font-size: 14px;
-}
-
-.cartoonlist{
-  min-height: 60px;
-  border: 1px solid #006666;
-}
-
-.cdk-drag-preview {
-  box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-  0 8px 10px 1px rgba(0, 0, 0, 0.14),
-  0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
-.cdk-drag-placeholder {
-  opacity: 0;
-}
-
-.cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.example-box:last-child {
-  border: none;
-}
-
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.bg{
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: 0;
-
-  .bg1{
-
-  }
-}
