--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,4 +16,4 @@
 
 <router-outlet></router-outlet>
 
-<div class="username">{{userName}}</div>
+<div class="username"><a href="javascript:;" (click)="exit()" title="Exit application">{{userName}}</a></div>
