--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,39 @@
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import '~@angular/material/theming';
+
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$yjs-asswsr-primary: mat-palette($mat-teal, 800);
+$yjs-asswsr-accent: mat-palette($mat-amber, 800, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$yjs-asswsr-warn: mat-palette($mat-red);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$yjs-asswsr-theme: mat-light-theme((
+  color: (
+    primary: $yjs-asswsr-primary,
+    accent: $yjs-asswsr-accent,
+    warn: $yjs-asswsr-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($yjs-asswsr-theme);
+
 /* You can add global styles to this file, and also import other style files */
 body {
   background-color: #ff9900;
@@ -140,6 +176,7 @@ countdown {
     stroke-dashoffset: 0;
   }
 }
+
 @keyframes scale {
   0%, 100% {
     transform: none;
@@ -148,8 +185,19 @@ countdown {
     transform: scale3d(1.1, 1.1, 1);
   }
 }
+
 @keyframes fill {
   100% {
     box-shadow: inset 0px 0px 0px 30px #7ac142;
   }
 }
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
