--- a/src/app/naam-invoer/naam-invoer.component.html
+++ b/src/app/naam-invoer/naam-invoer.component.html
@@ -1,3 +1,7 @@
-<label for="naam">Naam: </label>
-<input type="text" name="naam" id="naam" [(ngModel)]="naam">
-<button type="submit" (click)="verzend()">Verzend</button>
+<div>
+  <mat-form-field>
+    <mat-label>Naam</mat-label>
+    <input matInput type="text" name="naam" id="naam" [(ngModel)]="naam" autocomplete="off">
+  </mat-form-field>
+  <button mat-button type="submit" (click)="verzend()" color="primary">Verzend</button>
+</div>
