fix: size maze, lowercase filenames

--- a/src/app/deelnemer/opdracht4/opdracht4.component.html
+++ b/src/app/deelnemer/opdracht4/opdracht4.component.html
@@ -4,7 +4,7 @@
           [style.height.px]="height"
           #myCanvas
   ></canvas>
-  <img src="assets/img/Lowietje.png" alt="" id="lowietje" [style.display]="'none'">
+  <img src="assets/img/lowietje.png" alt="" id="lowietje" [style.display]="'none'">
   <div class="charms">
     <img width="50" height="50" src="assets/img/zoomIn.png" class="zoomIn" (click)="zoomIn()"/>
     <img width="50" height="50" src="assets/img/zoomOut.png" class="zoomOut" (click)="zoomOut()"/>
