--- a/src/app/deelnemer/opdracht8/opdracht8.component.scss
+++ b/src/app/deelnemer/opdracht8/opdracht8.component.scss
@@ -29,3 +29,10 @@ canvas {
   position: fixed;
   top: 135px;
 }
+
+.arrows {
+  padding-top: 10px;
+  button{
+    background-color: #00897b;
+  }
+}
