--- a/src/app/deelnemer/opdracht6/opdracht6.component.scss
+++ b/src/app/deelnemer/opdracht6/opdracht6.component.scss
@@ -2,6 +2,7 @@ canvas {
   z-index: 1000;
   position: fixed;
   height: calc(100vh - 150px);
+  max-height: 320px;
   width: 100vw;
   cursor: none;
 }
