--- a/src/app/deelnemer/opdracht9/opdracht9.component.scss
+++ b/src/app/deelnemer/opdracht9/opdracht9.component.scss
@@ -35,7 +35,7 @@
 .invoer {
   padding: 10px;
   position: fixed;
-  top: 700px;
+  top: 730px;
   width: 100%;
 
   .question {
@@ -48,21 +48,21 @@
     margin: 0 auto;
   }
 
-  button {
-    font-size: 0.6rem;
-    color: #006666;
-    border: solid 1px #006666;
-    padding: 5px 5px;
-    margin: 0 5px;
-    border-radius: 4px;
-    text-decoration: none;
-
-    &:hover {
-      background-color: #006666;
-      color: #ff9900;
-      box-shadow: 5px 5px gray;
-    }
-  }
+  //button {
+  //  font-size: 0.6rem;
+  //  color: #006666;
+  //  border: solid 1px #006666;
+  //  padding: 5px 5px;
+  //  margin: 0 5px;
+  //  border-radius: 4px;
+  //  text-decoration: none;
+  //
+  //  &:hover {
+  //    background-color: #006666;
+  //    color: #ff9900;
+  //    box-shadow: 5px 5px gray;
+  //  }
+  //}
 
   .word {
     background-color: silver;
@@ -75,4 +75,12 @@
       color: green;
     }
   }
+}
+
+button{
+  background-color: #00897b;
+}
+
+mat-label{
+  color:#ff8f00;
 }
